Add FPSFormat for writing Andrew Dalke's text fingerprint format
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4647 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -76,6 +76,7 @@ set(formats_misc
       featformat
       fhformat
       fingerprintformat
+      fpsformat
       freefracformat
       ghemicalformat
       gromos96format
