Potential ABI/API change: Check parsmart.h
parsmart.h, parsmart.cpp: Add SMARTS support for all forms of tet stereo involving 4-coordinate atoms. (3-coordinate + lone pair not yet supported)
test/CMakeLists.txt, test/testsmartssym.py: Associated test cases.

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4662 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -175,7 +175,7 @@ if(NOT MINGW AND NOT CYGWIN)
   include(UsePythonTest)
   if(PYTHON_EXECUTABLE)
     set(pytests
-        babel sym fastsearch unique kekule)
+        babel sym smartssym fastsearch unique kekule)
     foreach(pytest ${pytests})
     SET_SOURCE_FILES_PROPERTIES(test${pytest}.py PROPERTIES
         BABEL_LIBDIR "${CMAKE_BINARY_DIR}/lib"
