Initial support for writing LAMMPS input files, contributed by Albert DeFusco.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4701 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -81,6 +81,7 @@ set(formats_misc
       ghemicalformat
       gromos96format
       groformat
+      lmpdatformat
       mmcifformat
       mmodformat
       moldenformat
@@ -112,6 +113,9 @@ if(MSVC90 OR SHARED_POINTER)
     rsmiformat
   )
 endif(MSVC90 OR SHARED_POINTER)
+
+
+set_source_files_properties(lmpdatformat.cpp PROPERTIES COMPILE_FLAGS "-std=c++0x")
 
 set(optional_formatgroups "")
 if(CAIRO_FOUND)
