ophighlight.cpp, src/CMakeLists.txt: Add a new op to highlight substructures in 2D depictions. Based on opisomorph.cpp. Suggested by Chris Swain's comment at http://baoilleach.blogspot.com/2012/02/portrait-of-molecule-as-green.html
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4718 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,6 +73,7 @@ set(ops
   ops/readconformers.cpp
   ops/sort.cpp
   ops/opisomorph.cpp
+  ops/ophighlight.cpp
   ops/xout.cpp
 )
 if(EIGEN2_FOUND OR EIGEN3_FOUND)
