Patches from Paolo Tosco for polar/nonpolar hydrogens and PDBQT fixes.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4733 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,7 +60,10 @@ set(ops
   ops/addfilename.cpp
   ops/addinindex.cpp
   ops/addpolarh.cpp
+  ops/addnonpolarh.cpp
   ops/canonical.cpp
+  ops/delpolarh.cpp
+  ops/delnonpolarh.cpp
   ops/gen2D.cpp
   ops/fillUC.cpp
   ops/forcefield.cpp
